--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
 <div class="project ">
 <div class="thumbnail">
 <a href="wetlandstudies.github.io-master/index.html">
-<img class="thumbnail" src="images/floodmap.png" />   
+<img class="thumbnail" src="images/webApp.JPG" />   
 <span>
 <h1>HUD Floodplain Analysis</h1>
 <br />
