--- a/portfolio.html
+++ b/portfolio.html
@@ -38,14 +38,14 @@
 <a href="PSU_Presentation.html">
 <img class="thumbnail" src="images/Presentation.jpg" />   
 <span>
-<h1>Masters Thesis</h1>
+<h1>Penn State Masters Thesis</h1>
 <br />
 </span>
 </a>
 </div>
 </div>
 
-<!-- 1 - PORTFOLIO ITEM-->    
+<!-- 2 - PORTFOLIO ITEM-->    
 <div class="project ">
 <div class="thumbnail">
 <a href="blackbirch.html">
@@ -58,7 +58,7 @@
 </div>
 </div>
 
-<!-- 2 - PORTFOLIO ITEM-->    
+<!-- 3 - PORTFOLIO ITEM-->    
 <div class="project ">
 <div class="thumbnail">
 <a href="pennstate3d.html">
@@ -71,7 +71,7 @@
 </div>
 </div>
 
-<!-- 3 - PORTFOLIO ITEM-->    
+<!-- 4 - PORTFOLIO ITEM-->    
 <div class="project ">
 <div class="thumbnail">
 <a href="mapmaker.html">
@@ -84,7 +84,7 @@
 </div>
 </div>
 
-<!-- 4 - PORTFOLIO ITEM-->    
+<!-- 5 - PORTFOLIO ITEM-->    
 <div class="project ">
 <div class="thumbnail">
 <a href="sketchup.html">
@@ -97,7 +97,7 @@
 </div>
 </div>
 
-<!-- 5 - PORTFOLIO ITEM-->    
+<!-- 6 - PORTFOLIO ITEM-->    
 <div class="project ">
 <div class="thumbnail">
 <a href="sugarcamp.html">
@@ -110,7 +110,7 @@
 </div>
 </div>
 
-<!-- 6 - PORTFOLIO ITEM-->    
+<!-- 7 - PORTFOLIO ITEM-->    
 <div class="project ">
 <div class="thumbnail">
 <a href="floodplainmapping.html">
@@ -123,7 +123,7 @@
 </div>
 </div>
 
-<!-- 7 - PORTFOLIO ITEM-->    
+<!-- 8 - PORTFOLIO ITEM-->    
 <div class="project ">
 <div class="thumbnail">
 <a href="wetlandstudies.github.io-master/index.html">
