--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="wrapper">
 <nav class="site-nav">
 <div class="trigger">
-<a class="page-link" href="index.html"><font face="Montserrat Subrayada">Michael Bowser</font></a>   
+<a class="page-link" href="index.html"><font face="Montserrat Subrayada">Home</font></a>   
 <a class="page-link" href="portfolio.html">portfolio</a>
 <a class="page-link" href="images/Resume.pdf">resume</a>
 <a class="page-link" href="https://www.amazon.com/GIS-Cartography-Effective-Design-Second/dp/1482220679/ref=sr_1_2?s=books&ie=UTF8&qid=1402537037&sr=1-2&keywords=gis+cartography+a+guide+to+effective+map+design">publication</a>
