--- a/PSU_Presentation.html
+++ b/PSU_Presentation.html
@@ -35,7 +35,7 @@
 <div class="img_row">
 <img class="col three" src="images/Presentation.jpg" />
 </div>
-<div class="col three caption">Powdermill Nature Reserve - Black Birch Trail Map</div>
+<div class="col three caption">Penn State Masters Thesis Presentation</div>
 </article>
 </div>
 </div>
